# tableau_to_pbi

./: .gitignore  CHANGELOG.md  README.md  generate_report.py  migrate.py  pyproject.toml
.github/: agent-instructions.md  copilot-instructions.md
.github/agents/: extractor.agent.md  tableau.agent.md
.github/workflows/: ci.yml
artifacts/powerbi_projects/assessments/: global_assessment.html  global_assessment.json  portfolio_assessment.html  portfolio_assessment.json
artifacts/tableau_samples_output/: MIGRATION_DASHBOARD.html
artifacts/tableau_samples_output/BigQuery_Analytics/: lineage_map.json  migration_metadata.json
docs/: AGENTS.md  FAQ.md  README.md  ROADMAP.md  ZERO_ERROR_ROADMAP.md  zero_error_dashboard.html
powerbi_import/: __init__.py  api_server.py  assessment.py  cross_validator.py  fabric_project_generator.py  fabric_semantic_model_generator.py  html_template.py  llm_client.py  migration_report.py  notebook_api.py  pbip_generator.py  pdf_renderer.py  permission_mapper.py  plugin_sdk.py  pptx_report.py  report_packager.py  self_healing_report.py  self_healing_v3.py  subscription_generator.py  tmdl_generator.py  validator.py  visual_generator.py
powerbi_import/deploy/: deployer.py
scripts/: generate_presentation.py
tableau_export/: blend_graph.py  datasource_extractor.py  dax_converter.py  extract_tableau_data.py  m_query_builder.py  prep_flow_parser.py
tests/: test_api_v2.py  test_assessment.py  test_backlog.py  test_cli_refactor.py  test_coverage_sprint26.py  test_cross_validator.py  test_data_blending.py  test_datasource_extractor.py  test_dax_converter.py  test_dax_converter_coverage_push.py  test_dax_coverage.py  test_extract_coverage.py  test_extract_tableau_data.py  test_feature_gaps.py  test_gap_implementations.py  test_gap_optimization.py  test_generation_coverage.py  test_notebook_api_v2.py  test_pbip_coverage_push.py  test_pbip_filter_column_boolean.py  test_pbip_filter_measure_boolean.py  test_pbip_generator_coverage.py  test_phase_c_dax_m_hardening.py  test_phase_l_dax_coverage.py  test_pixel_perfect_fidelity.py  test_prep_flow_parser.py  test_report_packaging.py  test_security.py  test_self_healing_report.py  test_self_healing_report_phase5.py  test_slicer_intelligence.py  test_sprint109_hyper_inlining.py  test_sprint28.py  test_sprint_13.py  test_tmdl_coverage_push.py  test_tmdl_generator.py  test_v23_integration.py  test_v25_integration.py  test_v51_features.py
tests/baselines/: Total_Portfolio_Optimization.snapshot.json
web/: light_ui.py
(+158 files in other folders)
